Fix input