@@ -1,6 +1,6 @@
 package Arrays;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -12,7 +12,7 @@ public class ReverseArray {
     }
 
     public static void main(String[] args) {
-        List<Integer> input = new ArrayList<>(List.of(1, 2, 4, 5));
+        List<Integer> input = Arrays.asList(1, 2, 4, 5);
         List<Integer> output = reverseArray(input);
         for (Integer ele: output) {
             System.out.print(ele + " ");
